log/build_2022-05-04_14-36-52/central/stderr.log
  File "/app/dev_ws/install/central/lib/python3.8/site-packages/central/central_data.py", line 75
    if self.init_filter
                      ^
SyntaxError: invalid syntax

